# AI-interface-cookiecutter

./: .gitignore  Makefile  README.md  cookiecutter.json  requirements-test.txt  requirements.txt  tests.py
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .env-template  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
{{cookiecutter.project_slug}}/interfaces/: Home.py  agent-stdout-interface.py  demo-interface.py
{{cookiecutter.project_slug}}/interfaces/pages/: 2_👾_Python_Agent.py  3_📊_Pandas_AI.py
{{cookiecutter.project_slug}}/notebooks/: start_here.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/ai/: agents.py  chains.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/streamlit/: llm_blocks.py  utils.py
{{cookiecutter.project_slug}}/tests/: test_installation.py
{{cookiecutter.project_slug}}/tests/ai/: test_agents.py  test_chains.py
{{cookiecutter.project_slug}}/tests/streamlit/: simple_interface.py  test_llm_blocks.py
