[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "2.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.github_username}}"]

packages = [
    { include = "{{ cookiecutter.package_name }}", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9.17"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
ansi2html = "^1.8.0"
importlib-resources = "^6.1.0"
openai = "^1.3.7"
langchain = "^0.0.348"
streamlit = "^1.29.0"
streamlit-chat = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pre-commit = "^3.5.0"
black = "^23.11.0"
mypy = "^1.7.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
streamlit-mock = "^0.0.1"
coverage = {version = "^6.0.1", extras = ["toml"]}


[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/{{ cookiecutter.package_name }}/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
